--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   lint:
-    name: ESLint
+    name: Lint
     runs-on: ubuntu-latest
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
@@ -26,21 +26,13 @@ jobs:
           node-version: 16
           cache: "yarn"
 
-      - name: Lint
-        run: npx turbo run lint
+      - name: Install dependencies
+        run: yarn install
 
-  prettier:
-    name: Prettier
-    runs-on: ubuntu-latest
+      - name: Run ESLint
+        run: yarn lint
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-          fetch-depth: 0
-
-      - name: Prettify code
+      - name: Run Prettier
         uses: creyD/prettier_action@v4.2
         with:
           prettier_options: --write .
