--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
+          fetch-depth: 0
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
@@ -37,3 +38,4 @@ jobs:
         with:
           prettier_options: --write .
           only_changed: True
+          same_commit: True
