--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.168.0",
+    "@aws-sdk/s3-request-presigner": "^3.168.0",
     "@next/bundle-analyzer": "^12.3.0",
     "@prisma/client": "^4.3.0",
     "@rainbow-me/rainbowkit": "^0.5.1",
