fix build pipeline

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build", "codegen"],
-      "outputs": ["dist/**", ".next/**"]
+      "outputs": ["build/**", "dist/**", ".next/**"]
     },
     "client#build": {
       "dependsOn": [
