--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,7 @@
         "$NEXT_PUBLIC_IPFS_AUTH",
         "$NEXT_AUTH_SECRET",
         "$ALCHEMY_ID",
-        "$S3_IMAGE_HOSTNAME",
+        "$S3_BUCKET",
         "$S3_ENDPOINT",
         "$S3_REGION",
         "$S3_ACCESS_KEY_ID",
