--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -6,15 +6,15 @@
   "display": "fullscreen",
   "icons": [
     {
-      "src": "images/Logo-Icon-Maskable.png",
+      "src": "images/Logo.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "images/Logo-Maskable.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
-    },
-    {
-      "src": "images/Logo-Icon.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "name": "The Wired",
