--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -12,3 +12,6 @@ jobs:
         with:
           target: minor
           github-token: ${{ secrets.AUTOMERGE }}
+      - match:
+          dependency_name: typescript
+          update_type: semver:patch
