update auto merge

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -15,3 +15,6 @@ jobs:
       - match:
           dependency_name: typescript
           update_type: semver:patch
+      - match:
+          dependency_name: three
+          update_type: semver:patch
