--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -26,7 +26,6 @@
     "ethers": "^5.7.1",
     "immer": "^9.0.15",
     "ipfs-http-client": "^57.0.3",
-    "jotai": "^1.7.8",
     "nanoid": "^4.0.0",
     "next": "^12.3.0",
     "next-auth": "^4.10.3",
@@ -40,6 +39,7 @@
     "react-icons": "^4.4.0",
     "react-query": "3.39.2",
     "react-split": "^2.0.14",
+    "rxjs": "^7.5.6",
     "sharp": "^0.31.0",
     "urql": "^3.0.3",
     "wagmi": "^0.6.6",
@@ -61,7 +61,6 @@
     "postcss": "^8.4.16",
     "prisma": "^4.3.0",
     "tailwindcss": "^3.1.8",
-    "terser-webpack-plugin": "^5.3.4",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0"
   }
