--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -21,6 +21,7 @@
     "mediasoup-client": "^3.6.55",
     "meshoptimizer": "^0.18.1",
     "nanoid": "^4.0.0",
+    "rxjs": "^7.5.6",
     "socket.io-client": "^4.5.1",
     "three": "^0.140.2",
     "ts-loader": "^9.3.1"
