--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "codegen": "turbo run codegen",
     "deploy": "turbo run deploy",
     "dev": "turbo run dev --parallel",
-    "format": "eslint --fix . --ext .js,.jsx,.ts,.tsx,.json --ignore-path .prettierignore && prettier --write .",
+    "format": "eslint --fix . --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore && prettier --write .",
     "postinstall": "husky install && patch-package",
     "lint": "turbo run lint",
     "test": "turbo run test"
