--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -16,25 +16,19 @@
     "@gltf-transform/extensions": "^2.3.0",
     "@gltf-transform/functions": "^2.4.3",
     "@pixiv/three-vrm": "^1.0.0-beta.19",
-    "@types/draco3d": "^1.4.1",
     "bitecs": "^0.3.38",
     "mediasoup-client": "^3.6.55",
     "meshoptimizer": "^0.18.1",
     "nanoid": "^4.0.0",
     "rxjs": "^7.5.6",
     "socket.io-client": "^4.5.1",
-    "three": "^0.140.2",
-    "ts-loader": "^9.3.1"
+    "three": "^0.140.2"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.6",
     "@types/three": "^0.140.0",
     "@wired-labs/tsconfig": "*",
     "eslint": "^8.23.1",
     "eslint-config-custom": "*",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^29.0.3",
-    "ts-jest": "^28.0.7",
     "typescript": "^4.8.3"
   }
 }
