--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-tailwindcss": "^3.6.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "typescript": "^4.8.3"
   }
 }
