--- a/turbo.json
+++ b/turbo.json
@@ -6,31 +6,33 @@
       "outputs": ["build/**", "dist/**", ".next/**"]
     },
     "client#build": {
-      "dependsOn": [
-        "^build",
-        "$NEXT_PUBLIC_AXIOM_INGEST_ENDPOINT",
-        "$NEXT_PUBLIC_IPFS_ENDPOINT",
-        "$NEXT_PUBLIC_IPFS_GATEWAY",
-        "$NEXT_PUBLIC_IPFS_AUTH",
-        "$NEXT_AUTH_SECRET",
-        "$ALCHEMY_ID",
-        "$S3_BUCKET",
-        "$S3_ENDPOINT",
-        "$S3_REGION",
-        "$S3_ACCESS_KEY_ID",
-        "$S3_SECRET",
-        "$BUNDLE_ANALYZE",
-        "$NODE_ENV",
-        "$VERCEL_URL"
-      ],
-      "outputs": [".next/**"]
+      "dependsOn": ["^build"],
+      "outputs": [".next/**"],
+      "env": [
+        "NEXT_PUBLIC_AXIOM_INGEST_ENDPOINT",
+        "NEXT_PUBLIC_IPFS_ENDPOINT",
+        "NEXT_PUBLIC_IPFS_GATEWAY",
+        "NEXT_PUBLIC_IPFS_AUTH",
+        "NEXT_AUTH_SECRET",
+        "ALCHEMY_ID",
+        "S3_BUCKET",
+        "S3_ENDPOINT",
+        "S3_REGION",
+        "S3_ACCESS_KEY_ID",
+        "S3_SECRET",
+        "BUNDLE_ANALYZE",
+        "NODE_ENV",
+        "VERCEL_URL"
+      ]
     },
     "host#build": {
-      "dependsOn": ["^build", "$RTC_MIN_PORT", "$RTC_MAX_PORT"]
+      "dependsOn": ["^build"],
+      "env": ["RTC_MIN_PORT", "RTC_MAX_PORT"]
     },
     "codegen": {},
     "client#codegen": {
-      "dependsOn": ["$DATABASE_URL"]
+      "dependsOn": [],
+      "env": ["DATABASE_URL"]
     },
     "test": {
       "dependsOn": ["build"],
