--- a/apps/client/.eslintrc
+++ b/apps/client/.eslintrc
@@ -2,6 +2,14 @@
   "root": true,
   "extends": ["custom"],
   "rules": {
-    "@next/next/no-img-element": "off"
+    "@next/next/no-html-link-for-pages": "error"
+  },
+  "settings": {
+    "next": {
+      "rootDir": "apps/client"
+    },
+    "tailwindcss": {
+      "config": "apps/client/tailwind.config.js"
+    }
   }
 }
