--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,8 +12,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.178.0",
-    "@aws-sdk/s3-request-presigner": "^3.173.0",
+    "@aws-sdk/client-s3": "3.178.0",
+    "@aws-sdk/s3-request-presigner": "3.178.0",
     "@next/bundle-analyzer": "^12.3.1",
     "@prisma/client": "^4.3.0",
     "@rainbow-me/rainbowkit": "^0.6.1",
