--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -24,10 +24,11 @@
     "ts-loader": "^9.4.1"
   },
   "devDependencies": {
+    "@types/offscreencanvas": "^2019.7.0",
     "@types/three": "^0.140.0",
     "@wired-labs/tsconfig": "*",
     "eslint": "^8.23.1",
     "eslint-config-custom": "*",
-    "typescript": "^4.8.3"
+    "typescript": "~4.8.3"
   }
 }
