--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -12,10 +12,9 @@
     "eslint-config-turbo": "latest",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-json-files": "^1.3.0",
-    "eslint-plugin-react": "7.31.8",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-tailwindcss": "^3.6.2",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "typescript": "^4.8.3"
+    "typescript": "~4.8.3"
   }
 }
