--- a/packages/lens/package.json
+++ b/packages/lens/package.json
@@ -30,7 +30,7 @@
     "eslint": "^8.23.1",
     "eslint-config-custom": "*",
     "typechain": "^8.1.0",
-    "typescript": "^4.8.3"
+    "typescript": "~4.8.3"
   },
   "peerDependencies": {
     "react": ">=18.0",
