--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
@@ -36,6 +37,7 @@ jobs:
       - name: Run Prettier
         uses: creyD/prettier_action@v4.2
         with:
+          github_token: ${{ secrets.PRETTIER_TOKEN }}
           prettier_plugins: "prettier-plugin-prisma"
           prettier_options: --write .
           only_changed: True
