--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,4 +5,4 @@ updates:
     schedule:
       interval: "daily"
     ignore:
-      - dependency-name: "aws-sdk"
+      - dependency-name: "@aws-sdk/*"
