--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "license": "MIT",
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
     "eslint": "^8.24.0",
     "eslint-config-next": "^12.3.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-turbo": "latest",
+    "eslint-config-turbo": "^0.0.4",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-json-files": "^1.3.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
