update eslint config

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "extends": "@wired-labs/tsconfig/nextjs.json",
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.mjs"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.mjs",
+    "**/*.cjs"
+  ],
   "references": [
     {
       "path": "../../packages/engine"
