--- a/.prettierignore
+++ b/.prettierignore
@@ -44,3 +44,11 @@ contracts/
 
 # models
 apps/examples/public/models
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
