--- a/turbo.json
+++ b/turbo.json
@@ -9,25 +9,25 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**"],
       "env": [
+        "ALCHEMY_ID",
+        "BUNDLE_ANALYZE",
+        "NEXT_AUTH_SECRET",
         "NEXT_PUBLIC_AXIOM_INGEST_ENDPOINT",
+        "NEXT_PUBLIC_IPFS_AUTH",
         "NEXT_PUBLIC_IPFS_ENDPOINT",
         "NEXT_PUBLIC_IPFS_GATEWAY",
-        "NEXT_PUBLIC_IPFS_AUTH",
-        "NEXT_AUTH_SECRET",
-        "ALCHEMY_ID",
+        "NODE_ENV",
+        "S3_ACCESS_KEY_ID",
         "S3_BUCKET",
         "S3_ENDPOINT",
         "S3_REGION",
-        "S3_ACCESS_KEY_ID",
         "S3_SECRET",
-        "BUNDLE_ANALYZE",
-        "NODE_ENV",
         "VERCEL_URL"
       ]
     },
     "host#build": {
       "dependsOn": ["^build"],
-      "env": ["RTC_MIN_PORT", "RTC_MAX_PORT"]
+      "env": ["RTC_MAX_PORT", "RTC_MIN_PORT"]
     },
     "lint": {
       "outputs": []
