--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -8,7 +8,7 @@
     "codegen": "prisma generate",
     "deploy": "prisma db push",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "cd ../.. && eslint --fix apps/client --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore",
     "start": "next start"
   },
   "dependencies": {
