--- a/.github/auto-merge.yml
+++ b/.github/auto-merge.yml
@@ -11,7 +11,7 @@
     update_type: semver:patch
 
 - match:
-    dependency_name: @rainbow-me/rainbowkit
+    dependency_name: rainbow-me/rainbowkit
     update_type: semver:patch
 
 - match:
