--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -15,7 +15,8 @@
     "next-transpile-modules": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/offscreencanvas": "^2019.7.0",
