--- a/turbo.json
+++ b/turbo.json
@@ -19,6 +19,7 @@
         "NODE_ENV",
         "S3_ACCESS_KEY_ID",
         "S3_BUCKET",
+        "S3_CDN_ENDPOINT",
         "S3_ENDPOINT",
         "S3_REGION",
         "S3_SECRET",
