--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,13 +1,6 @@
 {
   "extends": "@wired-labs/tsconfig/nextjs.json",
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.js",
-    "**/*.mjs",
-    "**/*.cjs"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.mjs", "**/*.cjs"],
   "references": [
     {
       "path": "../../packages/engine"
