--- a/turbo.json
+++ b/turbo.json
@@ -9,17 +9,17 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**"],
       "env": [
-        "ALCHEMY_ID",
         "BUNDLE_ANALYZE",
-        "NEXT_AUTH_SECRET",
+        "NEXT_PUBLIC_ALCHEMY_ID",
         "NEXT_PUBLIC_AXIOM_INGEST_ENDPOINT",
+        "NEXT_PUBLIC_CDN_ENDPOINT",
         "NEXT_PUBLIC_IPFS_AUTH",
         "NEXT_PUBLIC_IPFS_ENDPOINT",
         "NEXT_PUBLIC_IPFS_GATEWAY",
+        "NEXTAUTH_SECRET",
         "NODE_ENV",
         "S3_ACCESS_KEY_ID",
         "S3_BUCKET",
-        "S3_CDN_ENDPOINT",
         "S3_ENDPOINT",
         "S3_REGION",
         "S3_SECRET",
