--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -15,13 +15,14 @@
     "@gltf-transform/functions": "^2.4.4",
     "@pixiv/three-vrm": "^1.0.2",
     "@types/draco3d": "^1.4.1",
+    "@wired-labs/lens": "*",
     "mediasoup-client": "^3.6.55",
     "meshoptimizer": "^0.18.1",
     "nanoid": "^4.0.0",
     "rxjs": "^7.5.7",
-    "socket.io-client": "^4.5.1",
     "three": "^0.140.2",
-    "ts-loader": "^9.4.1"
+    "ts-loader": "^9.4.1",
+    "urql": "^3.0.3"
   },
   "devDependencies": {
     "@types/offscreencanvas": "^2019.7.0",
