--- a/packages/lens/package.json
+++ b/packages/lens/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "graphql": "^16.5.0",
-    "urql": "^3.0.3",
-    "wagmi": "^0.6.7"
+    "urql": "^3.0.3"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.6.4",
