create Dockerfile for host

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@ node_modules
 .pnp.js
 
 # testing
-coverage/
+coverage
 
 # next.js
 .next/
 out/
-build/
+build
+
+# other
 dist/
 
 # misc
@@ -22,8 +24,7 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files
-.env
+# local env files
 .env.local
 .env.development.local
 .env.test.local
