--- a/.prettierignore
+++ b/.prettierignore
@@ -1,15 +1,17 @@
 # dependencies
-node_modules/
+node_modules
 .pnp
 .pnp.js
 
 # testing
-coverage/
+coverage
 
 # next.js
 .next/
 out/
-build/
+build
+
+# other
 dist/
 
 # misc
@@ -22,8 +24,7 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files
-.env
+# local env files
 .env.local
 .env.development.local
 .env.test.local
@@ -39,8 +40,8 @@ yarn-error.log*
 .docusaurus
 
 # codegen
-generated/
-contracts/
+generated
+contracts
 
 # models
 apps/examples/public/models
