--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -5,9 +5,14 @@
   "license": "GPL-3.0-or-later",
   "type": "module",
   "scripts": {
+    "build": "tsc --build tsconfig.json",
     "dev": "nodemon ./src/server.ts",
-    "_start": "node --experimental-specifier-resolution=node ./build/server.js",
-    "lint": "cd ../.. && eslint --fix apps/host --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
+    "docker:build": " yarn docker:clean && cd ../.. && docker build -t wired-labs/host -f apps/host/Dockerfile .",
+    "docker:clean": "yarn docker:stop && docker rmi wired-labs/host || true",
+    "docker:start": "yarn docker:stop && docker run -p 4000:4000 --name wired-host wired-labs/host",
+    "docker:stop": "docker stop wired-host && docker rm wired-host || true",
+    "lint": "cd ../.. && eslint --fix apps/host --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore",
+    "start": "node --experimental-specifier-resolution=node ./build/server.js"
   },
   "dependencies": {
     "@wired-labs/engine": "*",
