--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -10,7 +10,7 @@
     "deploy": "yarn docker:build && docker push ghcr.io/wired-labs/host",
     "docker:build": " yarn docker:clean && cd ../.. && docker build -t ghcr.io/wired-labs/host -f apps/host/Dockerfile .",
     "docker:clean": "yarn docker:stop && docker rmi ghcr.io/wired-labs/host || true",
-    "docker:start": "yarn docker:stop && docker run -p 4000:4000 --name wired-host ghcr.io/wired-labs/host",
+    "docker:start": "yarn docker:stop && docker run -e NODE_ENV=development -p 4000:4000 --name wired-host ghcr.io/wired-labs/host",
     "docker:stop": "docker stop wired-host && docker rm wired-host || true",
     "lint": "cd ../.. && eslint --fix apps/host --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore",
     "start": "node --experimental-specifier-resolution=node ./build/server.js"
