--- a/turbo.json
+++ b/turbo.json
@@ -29,7 +29,7 @@
     "host#build": {
       "dependsOn": ["^build"],
       "outputs": [],
-      "env": ["PORT", "SSL_CERT", "SSL_KEY"]
+      "env": ["PORT", "RTC_MAX_PORT", "RTC_MIN_PORT", "SSL_CERT", "SSL_KEY"]
     },
     "lint": {
       "outputs": []
