--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
+    "prettier-plugin-packagejson": "^2.3.0",
     "prettier-plugin-prisma": "^4.4.0",
     "turbo": "^1.5.5",
     "typescript": "~4.8.4"
