--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -25,6 +25,7 @@
     "@wired-labs/engine": "*",
     "@wired-labs/lens": "*",
     "ethers": "^5.7.1",
+    "graphql": "^16.5.0",
     "ipfs-http-client": "^57.0.3",
     "nanoid": "^4.0.0",
     "next": "^12.3.1",
