--- a/packages/lens/package.json
+++ b/packages/lens/package.json
@@ -29,11 +29,8 @@
     "eslint": "^8.25.0",
     "eslint-config-custom": "*",
     "ethers": "^5.7.1",
+    "graphql-tag": "^2.12.6",
     "typechain": "^8.1.0",
     "typescript": "~4.8.4"
-  },
-  "peerDependencies": {
-    "react": ">=18.0",
-    "react-dom": ">=18.0"
   }
 }
