--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -3,7 +3,7 @@
   "background_color": "#ffffff",
   "categories": ["social", "games", "entertainment"],
   "description": "An open and decentralized web-based metaverse platform.",
-  "display": "minimal-ui",
+  "display": "fullscreen",
   "icons": [
     {
       "src": "images/Logo.png",
