--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
-    "node": ">=16.0.0",
+    "node": "^16.0.0",
     "npm": ">=7.0.0"
   }
 }
