--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -19,7 +19,8 @@
     "@wired-labs/engine": "*",
     "mediasoup": "^3.10.10",
     "nanoid": "^4.0.0",
-    "uWebSockets.js": "uNetworking/uWebSockets.js#v20.13.0"
+    "uWebSockets.js": "uNetworking/uWebSockets.js#v20.13.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
