--- a/.dockerignore
+++ b/.dockerignore
@@ -35,3 +35,17 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# docusaurus
+.docusaurus
+
+# models
+apps/examples/public/models
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
