--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon ./src/server.ts",
     "docker:build": "yarn docker:clean && cd ../.. && docker build -t ghcr.io/wired-labs/host -f apps/host/Dockerfile .",
     "docker:clean": "yarn docker:stop && docker rmi ghcr.io/wired-labs/host || true",
-    "docker:start": "yarn docker:stop && docker run -e NODE_ENV=development -p 4000:4000 --name wired-host ghcr.io/wired-labs/host",
+    "docker:start": "docker run --rm -e RTC_MIN_PORT=20000 -e RTC_MAX_PORT=20020 -p 4000:4000 -p 20000-20020:20000-20020/tcp -p 20000-20020:20000-20020/udp --name wired-host ghcr.io/wired-labs/host",
     "docker:stop": "docker stop wired-host && docker rm wired-host || true",
     "lint": "cd ../.. && eslint --fix apps/host --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore",
     "start": "node --experimental-specifier-resolution=node ./build/server.js"
