upgrade to trpc 10

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -18,10 +18,10 @@
     "@next/bundle-analyzer": "^12.3.1",
     "@prisma/client": "^4.4.0",
     "@rainbow-me/rainbowkit": "^0.7.1",
-    "@trpc/client": "^9.27.4",
-    "@trpc/next": "^9.27.4",
-    "@trpc/react": "^9.27.4",
-    "@trpc/server": "^9.27.4",
+    "@trpc/client": "10.0.0-rc.0",
+    "@trpc/next": "10.0.0-rc.0",
+    "@trpc/react-query": "^10.0.0-rc.0",
+    "@trpc/server": "10.0.0-rc.0",
     "@wired-labs/engine": "*",
     "@wired-labs/lens": "*",
     "ethers": "^5.7.1",
