--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "~3.171.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^12.3.1",
+    "@next/font": "^13.0.0",
     "@prisma/client": "^4.4.0",
     "@rainbow-me/rainbowkit": "^0.7.1",
     "@trpc/client": "10.0.0-rc.0",
