set up cascading shadow maps

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,10 +19,10 @@
     "@next/font": "^13.0.0",
     "@prisma/client": "^4.5.0",
     "@rainbow-me/rainbowkit": "^0.7.1",
-    "@trpc/client": "10.0.0-rc.0",
-    "@trpc/next": "10.0.0-rc.0",
-    "@trpc/react-query": "^10.0.0-rc.0",
-    "@trpc/server": "10.0.0-rc.0",
+    "@trpc/client": "10.0.0-rc.6",
+    "@trpc/next": "10.0.0-rc.6",
+    "@trpc/react-query": "10.0.0-rc.6",
+    "@trpc/server": "10.0.0-rc.6",
     "@wired-labs/engine": "*",
     "@wired-labs/lens": "*",
     "ethers": "^5.7.1",
