--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -21,6 +21,7 @@
     "nanoid": "^4.0.0",
     "rxjs": "^7.5.7",
     "three": "^0.144.0",
+    "three-csm": "^2.0.0",
     "urql": "^3.0.3",
     "zod": "^3.19.1"
   },
