--- a/.prettierignore
+++ b/.prettierignore
@@ -43,13 +43,5 @@ yarn-error.log*
 generated
 contracts
 
-# models
-apps/examples/public/models
-
-# PWA files
-**/public/sw.js
-**/public/workbox-*.js
-**/public/worker-*.js
-**/public/sw.js.map
-**/public/workbox-*.js.map
-**/public/worker-*.js.map
+# public
+public
