--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,4 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           message: "chore: format code"
+          default_author: github_actions
