--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,8 +15,8 @@
     "@aws-sdk/client-s3": "~3.204.0",
     "@aws-sdk/s3-request-presigner": "~3.204.0",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@next/bundle-analyzer": "^13.0.2",
-    "@next/font": "^13.0.3",
+    "@next/bundle-analyzer": "13.0.2",
+    "@next/font": "13.0.2",
     "@prisma/client": "^4.6.1",
     "@rainbow-me/rainbowkit": "^0.8.0",
     "@trpc/client": "10.0.0-rc.6",
@@ -29,7 +29,7 @@
     "graphql": "^16.5.0",
     "ipfs-http-client": "^59.0.0",
     "nanoid": "^4.0.0",
-    "next": "^13.0.3",
+    "next": "13.0.2",
     "next-auth": "^4.16.4",
     "next-axiom": "^0.15.1",
     "next-pwa": "^5.6.0",
