--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,14 +15,14 @@
     "@aws-sdk/client-s3": "~3.204.0",
     "@aws-sdk/s3-request-presigner": "~3.204.0",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@next/bundle-analyzer": "13.0.4",
-    "@next/font": "13.0.4",
+    "@next/bundle-analyzer": "13.0.5",
+    "@next/font": "13.0.5",
     "@prisma/client": "^4.6.1",
     "@rainbow-me/rainbowkit": "^0.8.0",
-    "@trpc/client": "10.0.0-rc.8",
-    "@trpc/next": "10.0.0-rc.8",
-    "@trpc/react-query": "10.0.0-rc.8",
-    "@trpc/server": "10.0.0-rc.8",
+    "@trpc/client": "10.2.0",
+    "@trpc/next": "10.2.0",
+    "@trpc/react-query": "10.2.0",
+    "@trpc/server": "10.2.0",
     "@wired-labs/engine": "*",
     "@wired-labs/lens": "*",
     "ethers": "^5.7.2",
