--- a/.env
+++ b/.env
@@ -7,17 +7,17 @@ MYSQL_ROOT_PASSWORD="passworddb"
 DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/wired"
 
 # Client
-NEXT_PUBLIC_CDN_ENDPOINT="localhost:3000"
-NEXT_PUBLIC_IPFS_AUTH="localhost:3000"
-NEXT_PUBLIC_IPFS_ENDPOINT="localhost:3000"
-NEXT_PUBLIC_IPFS_GATEWAY="localhost:3000"
+NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
+NEXT_PUBLIC_IPFS_AUTH=""
+NEXT_PUBLIC_IPFS_ENDPOINT="http://localhost:5001"
+NEXT_PUBLIC_IPFS_GATEWAY="localhost:8080"
 
 NEXTAUTH_SECRET="1234567890"
-S3_ACCESS_KEY_ID="123"
+S3_ACCESS_KEY_ID="access_key"
 S3_BUCKET="wired"
-S3_ENDPOINT="localhost"
-S3_REGION="nyc3"
-S3_SECRET="123"
+S3_ENDPOINT="localhost:9999"
+S3_REGION="us-east-1"
+S3_SECRET="secret_key"
 
 # Host
 RTC_MIN_PORT="20000"
