add s3 to docker compose

--- a/.env
+++ b/.env
@@ -12,10 +12,11 @@ NEXT_PUBLIC_IPFS_AUTH=""
 NEXT_PUBLIC_IPFS_ENDPOINT="http://localhost:5001"
 NEXT_PUBLIC_IPFS_GATEWAY="localhost:8080"
 
-NEXTAUTH_SECRET="1234567890"
+NEXTAUTH_SECRET="123456789"
+
 S3_ACCESS_KEY_ID="access_key"
 S3_BUCKET="wired"
-S3_ENDPOINT="localhost:9999"
+S3_ENDPOINT="127.0.0.1:9000"
 S3_REGION="us-east-1"
 S3_SECRET="secret_key"
 
