upgrade `react-query` to `@tanstack/react-query`

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,6 +19,7 @@
     "@next/font": "13.0.5",
     "@prisma/client": "^4.6.1",
     "@rainbow-me/rainbowkit": "^0.8.0",
+    "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "10.2.0",
     "@trpc/next": "10.2.0",
     "@trpc/react-query": "10.2.0",
@@ -38,7 +39,6 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-query": "~3.39.2",
     "react-split": "^2.0.14",
     "rxjs": "^7.5.7",
     "sharp": "^0.31.2",
