--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "@wired-labs/tsconfig",
+  "name": "tsconfig",
   "version": "0.0.0",
   "private": true,
-  "main": "index.js",
   "files": [
     "base.json",
-    "nextjs.json",
-    "react-library.json"
+    "nextjs.json"
   ]
 }
