--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "license": "GPL-3.0-or-later",
   "scripts": {
@@ -24,11 +24,11 @@
     "@trpc/next": "10.2.0",
     "@trpc/react-query": "10.2.0",
     "@trpc/server": "10.2.0",
-    "@wired-labs/engine": "*",
-    "@wired-labs/lens": "*",
+    "engine": "*",
     "ethers": "^5.7.2",
     "graphql": "^16.5.0",
     "ipfs-http-client": "^59.0.0",
+    "lens": "*",
     "nanoid": "^4.0.0",
     "next": "13.0.5",
     "next-auth": "^4.16.4",
@@ -51,7 +51,6 @@
     "@types/offscreencanvas": "^2019.7.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "@wired-labs/tsconfig": "*",
     "autoprefixer": "^10.4.13",
     "dotenv-cli": "^6.0.0",
     "eslint": "^8.28.0",
@@ -59,6 +58,7 @@
     "postcss": "^8.4.19",
     "prisma": "^4.6.1",
     "tailwindcss": "^3.2.4",
+    "tsconfig": "*",
     "typescript": "~4.9.3"
   }
 }
