--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@wired-labs/tsconfig/nextjs.json",
+  "extends": "tsconfig/nextjs.json",
   "include": [
     ".next/types/**/*.ts",
     "**/*.cjs",
