--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 33060:33060
     working_dir: /var/lib/mysql
     volumes:
-      - mysql:/var/lib/mysql
+      - /var/lib/mysql
 
   ipfs:
     image: ipfs/go-ipfs
@@ -21,7 +21,7 @@ services:
       - 5001:5001
       - 8080:8080
     volumes:
-      - ipfs:/data/ipfs
+      - /data/ipfs
 
   minio:
     image: minio/minio
@@ -33,7 +33,7 @@ services:
       MINIO_ROOT_USER: ${S3_ACCESS_KEY_ID}
       MINIO_ROOT_PASSWORD: ${S3_SECRET}
     volumes:
-      - minio:/data
+      - /data
     command: server /data --console-address ":9090"
 
   turbo:
@@ -57,8 +57,4 @@ services:
     volumes:
       - ./apps:/app/apps
       - ./packages:/app/packages
-
-volumes:
-  mysql:
-  ipfs:
-  minio:
+      - /app/node_modules
