--- a/packages/engine/tsconfig.json
+++ b/packages/engine/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
     "composite": true,
-    "jsx": "preserve",
     "rootDir": "./src"
   },
-  "extends": "@wired-labs/tsconfig/base.json",
+  "extends": "tsconfig/base.json",
   "include": ["src"]
 }
