--- a/packages/lens/package.json
+++ b/packages/lens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wired-labs/lens",
+  "name": "lens",
   "version": "0.0.0",
   "private": true,
   "license": "GPL-3.0-or-later",
@@ -25,11 +25,11 @@
     "@typechain/ethers-v5": "^10.1.1",
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
-    "@wired-labs/tsconfig": "*",
     "eslint": "^8.28.0",
     "eslint-config-custom": "*",
     "ethers": "^5.7.2",
     "graphql-tag": "^2.12.6",
+    "tsconfig": "*",
     "typechain": "^8.1.1",
     "typescript": "~4.9.3"
   }
