--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,13 +1,6 @@
 {
   "extends": "tsconfig/nextjs.json",
-  "include": [
-    ".next/types/**/*.ts",
-    "**/*.cjs",
-    "**/*.mjs",
-    "**/*.ts",
-    "**/*.tsx",
-    "next-env.d.ts"
-  ],
+  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts"],
   "references": [
     {
       "path": "../../packages/engine"
