--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,18 @@ services:
       - /data
     command: server /data --console-address ":9090"
 
+  initminio:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc alias set myminio http://minio:9000 ${S3_ACCESS_KEY_ID} ${S3_SECRET};
+      /usr/bin/mc mb myminio/${S3_BUCKET};
+      /usr/bin/mc policy set public myminio/${S3_BUCKET};
+      exit 0;
+      "
+
   turbo:
     container_name: turbo
     build:
