--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,58 +2,64 @@ version: "3"
 
 services:
   db:
+    container_name: db
     image: mysql:8
-    command: --default-authentication-plugin=mysql_native_password --lower_case_table_names=1
-    restart: always
+    restart: unless-stopped
     env_file:
       - .env
     ports:
       - 3306:3306
       - 33060:33060
-    working_dir: /var/lib/mysql
     volumes:
-      - /var/lib/mysql
+      - db:/var/lib/mysql
+    working_dir: /var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password --lower_case_table_names=1
 
   ipfs:
-    image: ipfs/go-ipfs
-    restart: always
+    container_name: ipfs
+    build:
+      context: .
+      dockerfile: ./docker/ipfs.Dockerfile
+    restart: unless-stopped
     ports:
       - 5001:5001
       - 8080:8080
     volumes:
-      - /data/ipfs
+      - ipfs:/data/ipfs
 
   minio:
+    container_name: minio
     image: minio/minio
-    restart: always
-    ports:
-      - 9000:9000
-      - 9090:9090
+    restart: unless-stopped
     environment:
       MINIO_ROOT_USER: ${S3_ACCESS_KEY_ID}
       MINIO_ROOT_PASSWORD: ${S3_SECRET}
+    ports:
+      - 9000:9000
+      - 9090:9090
     volumes:
-      - /data
+      - minio:/data
     command: server /data --console-address ":9090"
 
-  initminio:
+  minio-init:
+    container_name: minio-init
     image: minio/mc
     depends_on:
       - minio
-    entrypoint: >
-      /bin/sh -c "
-      /usr/bin/mc alias set myminio http://minio:9000 ${S3_ACCESS_KEY_ID} ${S3_SECRET};
-      /usr/bin/mc mb myminio/${S3_BUCKET};
-      /usr/bin/mc policy set public myminio/${S3_BUCKET};
-      exit 0;
-      "
+    entrypoint:
+      - /bin/sh
+      - -c
+      - |
+        /usr/bin/mc alias set myminio http://minio:9000 ${S3_ACCESS_KEY_ID} ${S3_SECRET};
+        /usr/bin/mc mb myminio/${S3_BUCKET};
+        /usr/bin/mc policy set public myminio/${S3_BUCKET};
 
   turbo:
     container_name: turbo
     build:
       context: .
       dockerfile: ./docker/turbo.Dockerfile
-    restart: always
+    restart: unless-stopped
     env_file:
       - .env
     depends_on:
@@ -69,4 +75,10 @@ services:
     volumes:
       - ./apps:/app/apps
       - ./packages:/app/packages
-      - /app/node_modules
+      - turbo:/app/node_modules
+
+volumes:
+  db:
+  ipfs:
+  minio:
+  turbo:
