add deploy-host-dev action

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/wired"
 
 # Client
 NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
+NEXT_PUBLIC_DEFAULT_HOST="host.thewired.space"
 NEXT_PUBLIC_IPFS_AUTH=""
 NEXT_PUBLIC_IPFS_ENDPOINT="http://localhost:5001"
 NEXT_PUBLIC_IPFS_GATEWAY="localhost:8080"
