--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,7 @@
         "NEXT_PUBLIC_ALCHEMY_ID",
         "NEXT_PUBLIC_AXIOM_INGEST_ENDPOINT",
         "NEXT_PUBLIC_CDN_ENDPOINT",
+        "NEXT_PUBLIC_DEFAULT_HOST",
         "NEXT_PUBLIC_IPFS_AUTH",
         "NEXT_PUBLIC_IPFS_ENDPOINT",
         "NEXT_PUBLIC_IPFS_GATEWAY",
