--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "~3.204.0",
     "@aws-sdk/s3-request-presigner": "~3.204.0",
+    "@gltf-transform/core": "2.4.7",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "13.0.6",
     "@next/font": "13.0.6",
