--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-s3": "~3.204.0",
     "@aws-sdk/s3-request-presigner": "~3.204.0",
     "@gltf-transform/core": "2.4.7",
+    "@gltf-transform/extensions": "2.4.7",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "13.0.6",
     "@next/font": "13.0.6",
@@ -26,6 +27,7 @@
     "@trpc/react-query": "10.4.3",
     "@trpc/server": "10.4.3",
     "boring-avatars": "^1.7.0",
+    "draco3dgltf": "^1.5.5",
     "engine": "*",
     "ethers": "^5.7.2",
     "graphql": "^16.5.0",
@@ -50,6 +52,7 @@
     "zustand": "^4.1.5"
   },
   "devDependencies": {
+    "@types/draco3dgltf": "^1.4.0",
     "@types/offscreencanvas": "^2019.7.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
