--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,12 +21,14 @@
     "@next/font": "13.0.6",
     "@prisma/client": "^4.7.1",
     "@rainbow-me/rainbowkit": "^0.8.0",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.5",
     "@tanstack/react-query": "^4.19.1",
     "@trpc/client": "10.4.3",
     "@trpc/next": "10.4.3",
     "@trpc/react-query": "10.4.3",
     "@trpc/server": "10.4.3",
     "boring-avatars": "^1.7.0",
+    "contracts": "*",
     "engine": "*",
     "ethers": "^5.7.2",
     "graphql": "^16.5.0",
@@ -41,10 +43,12 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-split": "^2.0.14",
     "rxjs": "^7.6.0",
     "sharp": "^0.31.2",
+    "siwe": "^2.1.3",
     "urql": "^3.0.3",
     "wagmi": "^0.8.10",
     "zod": "^3.19.1",
