--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -9,6 +9,9 @@
     "generate": "typechain --target ethers-v5 --out-dir contracts './abis/*.json'",
     "lint": "cd ../.. && eslint --fix packages/contracts --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
   },
+  "dependencies": {
+    "zod": "^3.20.2"
+  },
   "devDependencies": {
     "@ethersproject/abi": "^5.6.4",
     "@ethersproject/bytes": "^5.6.1",
